--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -27,7 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            android:src="@drawable/bell_regular"/>
+            android:src="@drawable/bell_regular"
+            android:contentDescription="thong bao"/>
 
         <ImageButton
 
