--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -7,11 +7,13 @@
     android:padding="14dp">
 
     <ImageView
+
         android:id="@+id/img_music"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:layout_weight="10"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
@@ -32,5 +34,11 @@
             android:textColor="@color/black"
             android:textSize="14sp" />
     </LinearLayout>
-
+    <ImageButton
+        android:id="@+id/heart"
+        android:layout_weight="1"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/heart_regular"
+        android:background="@android:color/transparent"/>
 </LinearLayout>
