--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_library" android:title="Thư viện" android:icon="@drawable/library"/>
+    <item android:title="Thư viện" />
     <item android:id="@+id/menu_explore" android:title="Khám phá" android:icon="@drawable/explore"/>
     <item android:id="@+id/menu_zingchat" android:title="ZingChat" android:icon="@drawable/zingchat"/>
     <item android:id="@+id/menu_user" android:title="Cá nhân" android:icon="@drawable/user"/>
