--- a/app/src/main/res/layout/recyclerview_playlist.xml
+++ b/app/src/main/res/layout/recyclerview_playlist.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/image_playlist"
+            android:id="@+id/img_music"
             android:layout_width="62dp"
             android:layout_height="62dp"
             android:layout_marginStart="12dp"
@@ -25,7 +25,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_tenbaihat"
+                android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_marginTop="8dp"
@@ -34,7 +34,7 @@
                 android:textSize="18dp" />
 
             <TextView
-                android:id="@+id/txt_tencasi"
+                android:id="@+id/tv_artist"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_marginBottom="5dp"
