--- a/app/src/main/res/layout/fragment_play_music_.xml
+++ b/app/src/main/res/layout/fragment_play_music_.xml
@@ -8,33 +8,64 @@
     android:orientation="vertical"
     tools:context=".View.PlayMusic_Fragment"
     android:background="#EDBFBF">
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1">
+        android:id="@+id/thanh_nhac"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp">
+        <com.example.music_app1.View.CircularImageView
+            android:id="@+id/img_music_"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:contentDescription="hinh anh"
+            android:src="@drawable/custom_button"
+            app:backgroundTint="@null"/>
+        <LinearLayout
+            android:layout_weight="10"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/name_music_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/name_artist_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+        </LinearLayout>
         <ImageButton
-            android:id="@+id/thugon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="thu gọn"
-            android:src="@drawable/down"
+            android:id="@+id/playpause_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Play"
+            android:layout_gravity="center"
+            android:src="@drawable/pause_solid"
             android:background="@android:color/transparent"
-            android:onClick="minimizeFragment">
-
-        </ImageButton>
-
+            app:backgroundTint="@null"
+            android:contentDescription="hinh anh"/>
     </LinearLayout>
-<LinearLayout
-        android:id="@+id/content_layout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
-
-
+        android:padding="24dp">
+        <ImageButton
+            android:id="@+id/small_viewpage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/chevron_down_solid"
+            android:background="@android:color/transparent"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,32 +126,8 @@
             android:src="@drawable/circle_pause_regular"
             android:background="@android:color/transparent"
             app:backgroundTint="@null"
-            android:contentDescription="hinh anh">
+            android:contentDescription="hinh anh"/>
 
-        </ImageButton>
-
-    </LinearLayout>
-
-</LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="39dp"
-        android:layout_marginBottom="20dp"
-        android:orientation="vertical"
-        >
-
-        <ImageButton
-            android:id="@+id/phongto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:contentDescription="thu gọn"
-            android:src="@drawable/expandarrow"
-            android:layout_marginLeft="20dp"
-            android:onClick="maximizeFragment">
-
-        </ImageButton>
 
     </LinearLayout>
 </LinearLayout>
