--- a/app/src/main/res/drawable/custom_btn_login.xml
+++ b/app/src/main/res/drawable/custom_btn_login.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp" />
-    <solid android:color="#B236C8" />
+    <solid android:color="@color/color_purple" />
+    <stroke
+        android:width="1dp"
+        android:color="#ffffff" />
 </shape>
