--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,17 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation" >
     </androidx.viewpager2.widget.ViewPager2>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#CF87DC"
+        android:background="@drawable/custom_bg"
         app:itemIconTint="@color/color_navigation"
         app:itemTextColor="@color/color_navigation"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_navigation" />
-
 
 
 </RelativeLayout>
