--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
-    android:background="@color/color_app"
+    android:background="@drawable/custom_bg"
     tools:context=".View.SplashActivity">
 
     <ImageView
@@ -22,5 +22,5 @@
         android:text="Music App"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
-        android:textColor="@color/color_button"/>
+        android:textColor="@color/color_purple"/>
 </LinearLayout>
