--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="gray">#191818</color>
     <color name="color_app">#CF87DC</color>
     <color name="color_button">#B236C8</color>
+    <color name="colorTextHint">#504C4F</color>
 </resources>
