--- a/app/src/main/res/layout/fragment_library_.xml
+++ b/app/src/main/res/layout/fragment_library_.xml
@@ -6,13 +6,14 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#B8EC7B">
+    android:background="@drawable/custom_user">
 
     <LinearLayout
         android:id="@+id/thuvien"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
