--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D8E4DF"
+    android:background="@drawable/custom_user"
     android:orientation="vertical"
     tools:context=".Library_Fragment">
 
