--- a/app/src/main/res/layout/fragment_user_.xml
+++ b/app/src/main/res/layout/fragment_user_.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D8E4DF"
+    android:background="@drawable/custom_user"
     android:orientation="vertical"
     tools:context=".Library_Fragment">
 
@@ -106,5 +106,42 @@
         android:text="Nâng cấp tài khoản >"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="vertical"
+        android:layout_margin="20dp"
+        android:background="@drawable/custom_upgrade">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Zing MP3 PREMIUM"
+            android:textColor="#E3B324"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:layout_margin="10dp">
+
+        </TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="50,000đ"
+            android:textSize="22sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginLeft="10dp">
+
+        </TextView>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/premium"
+            android:background="@android:color/transparent"
+            >
+
+        </ImageButton>
+
+    </LinearLayout>
 
 </LinearLayout>
