--- a/app/src/main/res/layout/fragment_zingchat_.xml
+++ b/app/src/main/res/layout/fragment_zingchat_.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00BCD4"
+    android:background="@drawable/custom_user"
+    android:orientation="vertical"
     tools:context=".View.Library_Fragment">
 
     <LinearLayout
@@ -29,10 +30,18 @@
             android:background="@null"
             android:contentDescription="timkiem"
             android:padding="20dp"
-            android:src="@drawable/search"
-            />
+            android:src="@drawable/search" />
 
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_number_rank"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-</RelativeLayout>
+
+    </LinearLayout>
+</LinearLayout>
